<resources>
    <string name="app_name">StlMovie</string>
    <string name="movie_name">Lord of the Rings: The return of the King</string>
    <string name="release_date">Release Date: 2002–12–01</string>
    <string name="summary">Summary</string>
    <string name="casts">Casts</string>
    <string name="movie_description">The former Fellowship members prepare for the final battle. While Frodo and Sam approach Mount Doom to destroy the One Ring, they follow Gollum, unaware of the path he is leading them.</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="search_movies">Search Movies</string>

</resources>