<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:shimmer="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        tools:context=".views.home.HomeActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:text="@string/top_rated_movies"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/searchm"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_baseline_search_24" />
        </LinearLayout>

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_view_container_top_rated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            shimmer:duration="800">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <include layout="@layout/recyclerview_placeholder" />

                    <include layout="@layout/recyclerview_placeholder" />

                    <include layout="@layout/recyclerview_placeholder" />

                    <include layout="@layout/recyclerview_placeholder" />

                    <include layout="@layout/recyclerview_placeholder" />

                    <include layout="@layout/recyclerview_placeholder" />
                </LinearLayout>
            </HorizontalScrollView>
        </com.facebook.shimmer.ShimmerFrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/top_rated_recycler"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popular_movies"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_view_container_popular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            shimmer:duration="800">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <include layout="@layout/recyclerview_placeholder" />

                    <include layout="@layout/recyclerview_placeholder" />

                    <include layout="@layout/recyclerview_placeholder" />

                    <include layout="@layout/recyclerview_placeholder" />

                    <include layout="@layout/recyclerview_placeholder" />

                    <include layout="@layout/recyclerview_placeholder" />
                </LinearLayout>
            </HorizontalScrollView>
        </com.facebook.shimmer.ShimmerFrameLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/popular_recycler"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upcoming_movies"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_view_container_upcoming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            shimmer:duration="800">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <include layout="@layout/recyclerview_placeholder" />

                    <include layout="@layout/recyclerview_placeholder" />

                    <include layout="@layout/recyclerview_placeholder" />

                    <include layout="@layout/recyclerview_placeholder" />

                    <include layout="@layout/recyclerview_placeholder" />

                    <include layout="@layout/recyclerview_placeholder" />
                </LinearLayout>
            </HorizontalScrollView>

        </com.facebook.shimmer.ShimmerFrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/upcoming_recycler"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:visibility="gone" />

    </LinearLayout>
</ScrollView>
